[14.12.30]-[CO]-[Implementación de ItemReades - Capa de Vista - Test - Correciones en DAO y Service - Scripts]